# jEngine

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  Engine.cpp  Engine.h  eng.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h
include/: input.h  snake.h  vec.h
source/: Game.cpp  Game.h  Input.cpp  TestObject.cpp  TestObject.h  main.cpp  snake.cpp
